--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,4 +3,21 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  padding-block-start: 24px;
+}
+
+div.shiftsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 90% !important;
+}
+
+.card {
+  width: 100%;
+}
+
+.cardContent {
+  display: flex;
+  gap: 0.5rem;
 }
