--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,12 +2,14 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "Heebo", sans-serif;
 }
 
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  direction: rtl;
 }
 
 a {
