feat: next shift card

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -13,3 +13,13 @@ div.shiftsContainer {
   gap: 1rem;
   width: 90% !important;
 }
+
+.cardHeader {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cardHeader p {
+  margin: 0;
+}
