--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -23,3 +23,26 @@ div.shiftsContainer {
 .cardHeader p {
   margin: 0;
 }
+
+footer.cardFooter {
+  flex-direction: column;
+  padding: 0;
+  gap: 8px;
+  align-items: flex-start;
+}
+
+.shiftEntry {
+  display: flex;
+  margin: 8px 0;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.shiftEntry p {
+  margin: 0;
+}
+
+.tagsWrapper {
+  display: flex;
+  gap: 8px;
+}
