--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,12 @@
 .main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   min-height: 100vh;
   padding-block-start: 24px;
-  gap: 24px;
 }
 
-div.shiftsContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 90% !important;
+.grid {
+  align-self: stretch;
+}
+
+.textCenter {
+  text-align: center;
 }
